--- a/app/views/locations/searchposts.html.erb
+++ b/app/views/locations/searchposts.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-start">
+<div class="container text-start mb-3 mt-1">
   <div class="row justify-content-end">
     <div class="col"><h4>
         <%= t('.title') %> <%= Location.human_enum_name(:loctype, @location.loctype) %> <%= @location.name %>,
@@ -13,8 +13,10 @@
   </div>
 </div>
 
-<div id="posts">
+<div class="container">
+  <div class="row">
     <% @posts.each do |post| %>
       <%= render 'posts/post', post: post %>
     <% end %>
+  </div>
 </div>
