--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -1,15 +1,18 @@
-<div id="<%= dom_id team %>">
-    <table>
-        <tr class="">
-            <td>
-                <% if team.teamtype.present? %>
-                    <%= team.teamtype %> 
+<div class="col-sm-4">
+    <div id="<%= dom_id team %>">
+        <div class="card text-bg-light mt-2 mb-3">
+            <div class="card-body">
+                <h5 class="card-title">
+                    <% if team.teamtype.present? %>
+                        <%= team.teamtype %>
+                    <% end %>
+                    "<%= team.name %>"
+                </h5>
+                <h5 class="card-text">(<%= team.represent %>)</h5>
+                <% if user_signed_in? %>
+                    <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_team_path(team), class: "btn btn-secondary btn-sm ms-1" %>
                 <% end %>
-                "<%= team.name %>" (<%= team.represent %>)
-            </td>
-            <% if user_signed_in? %>
-                <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_team_path(team), class: "btn btn-secondary btn-sm ms-1" %></td>
-            <% end %>
-        </tr>
-    </table>
+            </div>
+        </div>
+    </div>
 </div>
