add grid to tournaments views

--- a/app/views/tournaments/_tournament.html.erb
+++ b/app/views/tournaments/_tournament.html.erb
@@ -1,16 +1,23 @@
-<div id="<%= dom_id tournament %>">
-    <table>
-        <tr class="">
-            <td><%= tournament.name %></td>
-            <% if tournament.subname.present? %>
-                <td>. <%= tournament.subname %></td>
-            <% end %>
-            <% if tournament.group.present? %>
-                <td>. <%= tournament.group %></td>
-            <% end %>
-            <% if user_signed_in? %>
-                <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_tournament_path(tournament), class: "btn btn-secondary btn-sm ms-1" %></td>
-            <% end %>
-        </tr>
-    </table>
+<div class="col-sm-4">
+    <div id="<%= dom_id tournament %>">
+        <div class="card text-bg-light mt-2 mb-3">
+            <div class="card-body">
+                <h5 class="card-title"><%= tournament.name %></h5>
+                <p class="card-text">
+                    <% if tournament.subname.present? %>
+                        <%= tournament.subname %>
+                    <% end %>
+                    <% if tournament.subname.present? && tournament.group.present? %>
+                        /
+                    <% end %>
+                    <% if tournament.group.present? %>
+                        <%= tournament.group %>
+                    <% end %>
+                </p>
+                <% if user_signed_in? %>
+                    <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_tournament_path(tournament), class: "btn btn-secondary btn-sm ms-1" %>
+                <% end %>
+            </div>
+        </div>
+    </div>
 </div>
