--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-start">
+<div class="container text-start mb-3 mt-1">
   <div class="row justify-content-end">
     <div class="col"><h4><%= t('.title') %></h4></div>
     <div class="col text-end">
@@ -9,8 +9,10 @@
   </div>
 </div>
 
-<div id="tournaments">
+<div class="container">
+  <div class="row">
     <% @tournaments.each do |tournament| %>
       <%= render tournament %>
     <% end %>
+  </div>
 </div>
