--- a/app/views/tournaments/new.html.erb
+++ b/app/views/tournaments/new.html.erb
@@ -1,3 +1,7 @@
-<h4><%= t('.title') %></h4>
+<div class="container text-start">
+    <div class="row">
+        <div class="col"><h4><%= t('.title') %></h4></div>
+    </div>
 
-<%= render "form", tournament: @tournament %>
+    <%= render "form", tournament: @tournament %>
+</div>
