--- a/app/views/stadia/_stadium.html.erb
+++ b/app/views/stadia/_stadium.html.erb
@@ -1,21 +1,32 @@
-<div id="<%= dom_id stadium %>">
-    <table>
-        <tr class="">
-            <td><%= stadium.name %></td>
-            <% if stadium.street.present? %>
-                <td>, <%= t('.street') %> <%= stadium.street %></td>
-            <% end %>
-            <td>, <%= Location.human_enum_name(:loctype, stadium.location.loctype) %> <%= stadium.location.name %></td>
-            <% if stadium.location.district.present? %>
-                <td>, <%= stadium.location.district %> <%= t('.district') %></td>
-            <% end %>
-            <% if stadium.location.region.present? %>
-                <td>, <%= stadium.location.region %> <%= t('.region') %></td>
-            <% end %>
-            <td>, <%= stadium.location.country %></td>
-            <% if user_signed_in? %>
-                <td><%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_stadium_path(stadium), class: "btn btn-secondary btn-sm ms-1" %></td>
-            <% end %>
-        </tr>
-    </table>
+<div class="col-sm-4">
+    <div id="<%= dom_id stadium %>">
+        <div class="card text-bg-light mt-2 mb-3">
+            <div class="card-body">
+                <h5 class="card-title"><%= stadium.name %></h5>
+                <p class="card-text">
+                    <h6><i class="bi bi-geo-alt"></i>
+                        <% if stadium.street.present? %>
+                            <%= t('.street') %> <%= stadium.street %>,
+                        <% end %>
+                        <%= Location.human_enum_name(:loctype, stadium.location.loctype) %> <%= stadium.location.name %>
+                    </h6>
+                    <% if stadium.location.district.present? %>
+                        <%= stadium.location.district %> <%= t('.district') %>,
+                    <% end %>
+                    <% if stadium.location.region.present? %>
+                        <%= stadium.location.region %> <%= t('.region') %>,
+                    <% end %>
+                    <%= stadium.location.country %>
+                </p>
+                <p>
+                    <% if user_signed_in? %>
+                    <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_stadium_path(stadium), class: "btn btn-secondary btn-sm ms-1" %>
+                    <% end %>
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+
