--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <%= render 'shared/header' %>
     </header>
 
-    <main class="mx-auto m-5 p-4" style="width: 1000px;">
+    <main class="mx-auto m-5 p-4">
       <%= render 'shared/flash_messages' %>
       <%= yield %>
     </main>
