--- a/app/views/locations/searchposts.html.erb
+++ b/app/views/locations/searchposts.html.erb
@@ -1,7 +1,7 @@
 <div class="container text-start mb-3 mt-1">
   <div class="row justify-content-end">
     <div class="col"><h4>
-        <%= t('.title') %> <%= Location.human_enum_name(:loctype, @location.loctype) %> <%= @location.name %>,
+        <%= t('.title_part1') %> <%= Location.human_enum_name(:loctype, @location.loctype) %> <%= @location.name %>,
             <% if @location.district.present? %>
                 <%= @location.district %> <%= t('.district') %>,
             <% end %>
@@ -9,6 +9,13 @@
                 <%= @location.region %> <%= t('.region') %>,
             <% end %>
             <%= @location.country %>
+            <% if @posts.empty? %>
+              <%= t('.title_empty') %>
+            <% else %>
+              (<%= t('.title_part2') %> <%= @posts.size %>)
+            <% end %>
+            
+            
         </h4></div>
   </div>
 </div>
