--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -30,10 +30,12 @@
                         <li class="nav-item">
                             <%= link_to t('navigation.stadia'), stadia_path, class: "dropdown-item" %>
                         </li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li class="nav-item">
-                            <%= link_to t('navigation.matches'), matches_path, class: "dropdown-item" %>
-                        </li>
+                        <% if user_signed_in? %>
+                            <li><hr class="dropdown-divider"></li>
+                            <li class="nav-item">
+                                <%= link_to t('navigation.matches'), matches_path, class: "dropdown-item" %>
+                            </li>
+                        <% end %>
                     </ul>
                 </li>
             </ul>
