--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -9,6 +9,7 @@
                     "<%= team.name %>"
                 </h5>
                 <h5 class="card-text">(<%= team.represent %>)</h5>
+                <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, teams_searchposts_path(id: team.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
                 <% if user_signed_in? %>
                     <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_team_path(team), class: "btn btn-secondary btn-sm ms-1" %>
                 <% end %>
