add searchposts for tournament

--- a/app/views/tournaments/_tournament.html.erb
+++ b/app/views/tournaments/_tournament.html.erb
@@ -14,6 +14,7 @@
                         <%= tournament.group %>
                     <% end %>
                 </p>
+                <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, tournaments_searchposts_path(id: tournament.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
                 <% if user_signed_in? %>
                     <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_tournament_path(tournament), class: "btn btn-secondary btn-sm ms-1" %>
                 <% end %>
