--- a/app/views/locations/searchposts.html.erb
+++ b/app/views/locations/searchposts.html.erb
@@ -14,8 +14,6 @@
             <% else %>
               (<%= t('.title_part2') %> <%= @posts.size %>)
             <% end %>
-            
-            
         </h4></div>
   </div>
 </div>
@@ -26,4 +24,8 @@
       <%= render 'posts/post', post: post %>
     <% end %>
   </div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <%== pagy_bootstrap_combo_nav_js(@pagy) if @pagy.pages > 1 %>
 </div>
