--- a/app/views/stadia/index.html.erb
+++ b/app/views/stadia/index.html.erb
@@ -16,3 +16,7 @@
     <% end %>
   </div>
 </div>
+
+<div class="d-flex justify-content-center">
+  <%== pagy_bootstrap_combo_nav_js(@pagy)  %>
+</div>
