--- a/app/views/stadia/searchposts.html.erb
+++ b/app/views/stadia/searchposts.html.erb
@@ -1,7 +1,7 @@
 <div class="container text-start mb-3 mt-1">
   <div class="row justify-content-end">
     <div class="col"><h4>
-        <%= t('.title_part1') %> 
+        <%= t('.title_part1') %>
         <%= @stadium.name %>,
         <% if @stadium.street.present? %>
             <%= t('.street') %> <%= @stadium.street %>,
@@ -29,4 +29,8 @@
       <%= render 'posts/post', post: post %>
     <% end %>
   </div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <%== pagy_bootstrap_combo_nav_js(@pagy) if @pagy.pages > 1 %>
 </div>
