--- a/app/views/stadia/index.html.erb
+++ b/app/views/stadia/index.html.erb
@@ -18,5 +18,5 @@
 </div>
 
 <div class="d-flex justify-content-center">
-  <%== pagy_bootstrap_combo_nav_js(@pagy)  %>
+  <%== pagy_bootstrap_combo_nav_js(@pagy) if @pagy.pages > 1 %>
 </div>
