--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -26,6 +26,12 @@
       <%= form.text_field :represent,  placeholder: t('.placeholder.represent'), class: "form-control" %>
     </div>
 
+    <div class="col-12">
+          <%= form.label :teamlogo, t('.teamlogo'), style: "display: block" %>
+          <%= image_tag team.teamlogo.variant(:thumb), class: "my-2" if team.teamlogo.present? %>
+          <%= form.file_field :teamlogo, class: "form-control" %>
+        </div>
+
     <div class="field">
           <%= form.label :teaminfo, t('.teaminfo'), style: "display: block" %>
           <%= form.rich_text_area :teaminfo %>
