--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,10 +2,9 @@
   <div class="row text-center py-2">
     <div class="col">
       <h4>
-        <% if @team.teamtype.present? %>
-            <%= @team.teamtype %>
-            <% end %>
-            "<%= @team.name %>" (<%= @team.represent %>)
+        <%= image_tag @team.teamlogo.variant(:thumb) if @team.teamlogo.present? %>
+        <%= @team.teamtype if @team.teamtype.present? %>
+        "<%= @team.name %>" (<%= @team.represent %>)
         <% if user_signed_in? %>
           <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_team_path(@team), class: "btn btn-secondary ms-2" %>
         <% end %>
