clean code in all partials

--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -9,7 +9,9 @@
                     <%= team.teamtype if team.teamtype.present? %>
                     "<%= team.name %>"
                 </h5>
-                <h5 class="card-text">(<%= team.represent %>)</h5>
+                <h6 class="card-text">
+                    (<%= team.represent %>)
+                </h6>
                 <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, teams_searchposts_path(id: team.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
                 <%= link_to '<i class="bi bi-person-vcard"></i>'.html_safe, team, class: "btn btn-secondary btn-sm ms-1" %>
                 <% if user_signed_in? %>
