--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,13 +9,17 @@
                             <%= post.content.to_plain_text.truncate(128) %>
                         </p>
                     <% else %>
-                        <h5 class="card-title mb-1 pb-1"><%= post.title %></h5>
+                        <h5 class="card-title mb-1 pb-1">
+                            <%= post.title %>
+                        </h5>
                         <p class="card-text m-0 p-0">
                             <h6 class="fw-light">
-                                <table class="table align-middle table-light table-borderless table-sm m-0 p-0"><tr>
-                                <td class="text-start text-nowrap"><i class="bi bi-calendar3"></i> <%= post.postdate %></td>
-                                <td class="text-end"><i class="bi bi-geo-alt"></i> <%= Location.human_enum_name(:loctype, post.location.loctype) %> <%= post.location.name %></td>
-                                </tr></table>
+                                <table class="table align-middle table-light table-borderless table-sm m-0 p-0">
+                                    <tr>
+                                        <td class="text-start text-nowrap"><i class="bi bi-calendar3"></i> <%= post.postdate %></td>
+                                        <td class="text-end"><i class="bi bi-geo-alt"></i> <%= Location.human_enum_name(:loctype, post.location.loctype) %> <%= post.location.name %></td>
+                                    </tr>
+                                </table>
                             </h6>
                             <%= post.content.to_plain_text.truncate(512) %>
                         </p>
