--- a/app/views/stadia/_stadium.html.erb
+++ b/app/views/stadia/_stadium.html.erb
@@ -3,13 +3,14 @@
         <div class="card text-bg-light mt-2 mb-3">
             <div class="card-body">
                 <h5 class="card-title"><%= stadium.name %></h5>
-                <p class="card-text">
-                    <h6><i class="bi bi-geo-alt"></i>
+                <h6 class="card-text">
+                        <i class="bi bi-geo-alt"></i>
                         <% if stadium.street.present? %>
                             <%= t('.street') %> <%= stadium.street %>,
                         <% end %>
                         <%= Location.human_enum_name(:loctype, stadium.location.loctype) %> <%= stadium.location.name %>
-                    </h6>
+                </h6>
+                <h6 class="fw-light">
                     <% if stadium.location.district.present? %>
                         <%= stadium.location.district %> <%= t('.district') %>,
                     <% end %>
@@ -17,13 +18,11 @@
                         <%= stadium.location.region %> <%= t('.region') %>,
                     <% end %>
                     <%= stadium.location.country %>
-                </p>
-                <p>
-                    <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, stadia_searchposts_path(id: stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
-                    <% if user_signed_in? %>
-                        <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_stadium_path(stadium), class: "btn btn-secondary btn-sm ms-1" %>
-                    <% end %>
-                </p>
+                </h6>
+                <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, stadia_searchposts_path(id: stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
+                <% if user_signed_in? %>
+                    <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_stadium_path(stadium), class: "btn btn-secondary btn-sm ms-1" %>
+                <% end %>
             </div>
         </div>
     </div>
