--- a/app/views/stadia/_stadium.html.erb
+++ b/app/views/stadia/_stadium.html.erb
@@ -20,6 +20,8 @@
                     <%= stadium.location.country %>
                 </h6>
                 <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, stadia_searchposts_path(id: stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
+                <%= link_to '<i class="bi bi-person-vcard"></i>'.html_safe, stadium_posts_searchposts_path(id: stadium.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
+
                 <% if user_signed_in? %>
                     <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_stadium_path(stadium), class: "btn btn-secondary btn-sm ms-1" %>
                 <% end %>
