--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,9 +22,14 @@
           <%= form.date_field :postdate, :value => ( form.object.postdate || Time.now.to_date ), class: "form-control" %>
         </div>
 
-        <div class="col-md-9">
+        <div class="col-md-5">
           <%= form.label :location_id, t('.location'), style: "display: block" %>
           <%= select(:post, :location_id, options_for_select(@locations, :selected => form.object.location_id), {:prompt => t('.prompt.location')}, {:class => "form-select"}) %>
+        </div>
+
+        <div class="col-md-4">
+          <%= form.label :posttype, t('.posttype'), style: "display: block" %>
+          <%= form.select :posttype, Post.posttypes.keys.map{ |key| [Post.human_enum_name(:posttype, key), key] }, {:prompt => t('.prompt.posttype'), :selected => @post.posttype}, {:class => "form-select"} %>
         </div>
 
         <div class="col-12">
