resolved conflict with pagy and items count on searchposts

--- a/app/views/teams/searchposts.html.erb
+++ b/app/views/teams/searchposts.html.erb
@@ -9,7 +9,7 @@
         <% if @posts.empty? %>
             <%= t('.title_empty') %>
         <% else %>
-            (<%= t('.title_part2') %> <%= @posts.size %>)
+            (<%= t('.title_part2') %> <%= @count %>)
         <% end %>
     </h4></div>
   </div>
