--- a/app/views/stadium_posts/searchposts.html.erb
+++ b/app/views/stadium_posts/searchposts.html.erb
@@ -7,7 +7,7 @@
         <% if @posts.empty? %>
             <%= t('.title_empty') %>
         <% else %>
-            (<%= t('.title_part2') %> <%= @posts.size %>)
+            (<%= t('.title_part2') %> <%= @posts.count %>)
         <% end %>
     </h4></div>
   </div>
