--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,17 @@
     <%= favicon_link_tag asset_path('fzv-32.png') %>
   </head>
 
-  <body>
-    <header class="fixed-top bg-dark text-center text-white">
+  <body class="bg-dark">
+    <header class="fixed-top text-center text-white">
       <%= render 'shared/header' %>
     </header>
 
-    <main class="mx-auto m-5 p-4">
+    <main class="mx-auto mt-5 p-4" style="background-color: #DCDCDC;">
       <%= render 'shared/flash_messages' %>
       <%= yield %>
     </main>
 
-    <footer class="fixed-bottom bg-dark text-center text-white">
+    <footer class="bd-footer text-center text-white">
       <%= render 'shared/footer' %>
     </footer>
   </body>
