--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-start text-bg-light border border-color-translucent rounded pb-3 my-3">
+<div class="container card text-start text-bg-light pb-3 my-3">
   <div class="row text-center py-2">
     <div class="col">
       <h4>
