change styles in header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body class="bg-dark">
-    <header class="fixed-top text-center text-white">
+    <header class="fixed-top text-white">
       <%= render 'shared/header' %>
     </header>
 
