--- a/app/views/stadia/_form.html.erb
+++ b/app/views/stadia/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: stadium) do |form| %>
+<%= form_with(model: stadium, html: {class: "card p-3 my-3"}) do |form| %>
     <% if stadium.errors.any? %>
         <div style="color: red">
         <h2><%= t 'forms.messages.errors', count: stadium.errors.count %></h2>
