--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: match) do |form| %>
+<%= form_with(model: match, html: {class: "card p-3 my-3"}) do |form| %>
     <% if match.errors.any? %>
         <div style="color: red">
         <h2><%= t 'forms.messages.errors', count: match.errors.count %></h2>
