--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: team) do |form| %>
+<%= form_with(model: team, html: {class: "card p-3 my-3"}) do |form| %>
   <% if team.errors.any? %>
     <div style="color: red">
       <h2><%= t 'forms.messages.errors', count: team.errors.count %></h2>
