--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -28,8 +28,8 @@
 
     <div class="col-12">
           <%= form.label :teamlogo, t('.teamlogo'), style: "display: block" %>
-          <%= image_tag team.teamlogo.variant(:thumb), class: "my-2" if team.teamlogo.present? %>
-          <%= form.file_field :teamlogo, class: "form-control" %>
+          <%= cl_image_tag team.teamlogo.key, class: "my-2" if team.teamlogo.present? %>
+          <%= form.file_field :teamlogo, direct_upload: true, class: "form-control" %>
         </div>
 
     <div class="field">
