--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,6 +12,9 @@
                     <%= link_to t('navigation.posts'), posts_path, class: "nav-link text-white" %>
                 </li>
                 <li class="nav-item">
+                    <%= link_to t('navigation.albums'), albums_path, class: "nav-link text-white" %>
+                </li>
+                <li class="nav-item">
                     <%= link_to t('navigation.locations'), locations_path, class: "nav-link text-white" %>
                 </li>
                 <li class="nav-item dropdown">
@@ -65,7 +68,7 @@
             <% if user_signed_in? %>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <%= button_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-primary" %>
+                        <%= button_to t('navigation.logout'), destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn  btn-outline-info" %>
                     </li>
                 </ul>
             <% end %>
