--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,18 +1,18 @@
 <div class="container text-center p-2">
   <div class="row align-items-center justify-content-between">
       <div class="col-6">
-         <%= link_to "https://facebook.com/fzvphoto", class: "btn btn-outline-light btn-sm btn-floating", type: "button" do %>
+         <%= link_to "https://facebook.com/fzvphoto", target: :_blank, class: "btn btn-outline-light btn-sm btn-floating", type: "button" do %>
             <i class="bi bi-facebook"></i>  
          <% end %>
-         <%= link_to "https://instagram.com/fzvphoto", class: "btn btn-outline-light btn-sm btn-floating", type: "button" do %>
+         <%= link_to "https://instagram.com/fzvphoto", target: :_blank, class: "btn btn-outline-light btn-sm btn-floating", type: "button" do %>
             <i class="bi bi-instagram"></i>  
          <% end %>
-         <%= link_to "https://twitter.com/fzvphoto", class: "btn btn-outline-light btn-sm btn-floating", type: "button" do %>
+         <%= link_to "https://twitter.com/fzvphoto", target: :_blank, class: "btn btn-outline-light btn-sm btn-floating", type: "button" do %>
             <i class="bi bi-twitter"></i>  
          <% end %>
       </div>
       <div class="col-6">
-         <%= "\u00A9"%> 2019-<%= Date.today.year %> <%= link_to "https://github.com/Botiuk", class: "text-white" do %>
+         <%= "\u00A9"%> 2019-<%= Date.today.year %> <%= link_to "https://github.com/Botiuk", target: :_blank, class: "text-white" do %>
          <%= t('author') %>
          <% end %>
       </div>      
