--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -14,6 +14,7 @@
                     <%= location.country %>
                 </h6>
                 <%= link_to '<i class="bi bi-file-text"></i>'.html_safe, locations_searchposts_path(id: location.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
+                <%= link_to '<i class="bi bi-camera"></i>'.html_safe, locations_searchalbums_path(id: location.id), :method => :get, class: "btn btn-secondary btn-sm ms-1" %>
                 <% if user_signed_in? %>
                     <%= link_to '<i class="bi bi-highlighter"></i>'.html_safe, edit_location_path(location), class: "btn btn-secondary btn-sm ms-1" %>
                 <% end %>
