--- a/app/views/teams/searchposts.html.erb
+++ b/app/views/teams/searchposts.html.erb
@@ -1,28 +1,3 @@
-<div class="container text-start mb-3 mt-1">
-  <div class="row justify-content-end">
-    <div class="col"><h4>
-        <%= t('.title_part1') %>
-        <% if @team.teamtype.present? %>
-            <%= @team.teamtype %>
-        <% end %>
-        "<%= @team.name %>" /<%= @team.represent %>/
-        <% if @posts.empty? %>
-            <%= t('.title_empty') %>
-        <% else %>
-            (<%= t('.title_part2') %> <%= @count %>)
-        <% end %>
-    </h4></div>
-  </div>
-</div>
+<%= render 'searchtitle' %>
 
-<div class="container">
-  <div class="row">
-    <% @posts.each do |post| %>
-      <%= render 'posts/post', post: post %>
-    <% end %>
-  </div>
-</div>
-
-<div class="d-flex justify-content-center">
-  <%== pagy_bootstrap_combo_nav_js(@pagy) if @pagy.pages > 1 %>
-</div>
+<%= render 'shared/searchposts' %>
