--- a/app/views/locations/searchalbums.html.erb
+++ b/app/views/locations/searchalbums.html.erb
@@ -1,31 +1,3 @@
-<div class="container text-start mb-3 mt-1">
-  <div class="row justify-content-end">
-    <div class="col"><h4>
-        <%= t('.title_part1') %> <%= Location.human_enum_name(:loctype, @location.loctype) %> <%= @location.name %>,
-            <% if @location.district.present? %>
-                <%= @location.district %> <%= t('.district') %>,
-            <% end %>
-            <% if @location.region.present? %>
-                <%= @location.region %> <%= t('.region') %>,
-            <% end %>
-            <%= @location.country %>
-            <% if @albums.empty? %>
-              <%= t('.title_empty') %>
-            <% else %>
-              (<%= t('.title_part2') %> <%= @count %>)
-            <% end %>
-        </h4></div>
-  </div>
-</div>
+<%= render 'searchtitle' %>
 
-<div class="container">
-  <div class="row">
-    <% @albums.each do |album| %>
-      <%= render 'albums/album', album: album %>
-    <% end %>
-  </div>
-</div>
-
-<div class="d-flex justify-content-center">
-  <%== pagy_bootstrap_combo_nav_js(@pagy) if @pagy.pages > 1 %>
-</div>
+<%= render 'shared/searchalbums' %>
